--- a/drumkit.html
+++ b/drumkit.html
@@ -10,21 +10,21 @@
 
 <body>
   <!-- <h1 id="title">Drum 🥁 Kit</h1> -->
+  <h1>Hit on drums to play sounds</h1>
   <div class="set">
-    <button class="w drum">w</button>
+      
     <button class="a drum">a</button>
-    <button class="s drum">s</button>
+    <button class="b drum">b</button>
+    <button class="c drum">c</button>
     <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="e drum">e</button>
+    <button class="f drum">f</button>
+    <button class="g drum">g</button>
   </div>
 
 
 <script src="drumkit.js" charset="utf-8"></script>
 
-<!-- <footer>
-  Try making different combinations with the Drum❓
-</footer> -->
+
 </body>
 </html>
